typescript/checker/tests/conformance/types/nonPrimitive/nonPrimitiveConstraintOfIndexAccessType.ts.stderr
error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            1082,
        ),
        hi: BytePos(
            1084,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/types/nonPrimitive/nonPrimitiveConstraintOfIndexAccessType.ts:4:5
  |
4 |     tp = s;
  |     ^^

error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            1171,
        ),
        hi: BytePos(
            1173,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/types/nonPrimitive/nonPrimitiveConstraintOfIndexAccessType.ts:7:5
  |
7 |     tp = s;
  |     ^^

error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            1265,
        ),
        hi: BytePos(
            1267,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/types/nonPrimitive/nonPrimitiveConstraintOfIndexAccessType.ts:10:5
   |
10 |     tp = s;
   |     ^^

error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            1354,
        ),
        hi: BytePos(
            1356,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/types/nonPrimitive/nonPrimitiveConstraintOfIndexAccessType.ts:13:5
   |
13 |     tp = s;
   |     ^^

error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            1444,
        ),
        hi: BytePos(
            1446,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/types/nonPrimitive/nonPrimitiveConstraintOfIndexAccessType.ts:16:5
   |
16 |     tp = s;
   |     ^^

error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            1535,
        ),
        hi: BytePos(
            1537,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/types/nonPrimitive/nonPrimitiveConstraintOfIndexAccessType.ts:19:5
   |
19 |     tp = s;
   |     ^^

error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            1626,
        ),
        hi: BytePos(
            1628,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/types/nonPrimitive/nonPrimitiveConstraintOfIndexAccessType.ts:22:5
   |
22 |     tp = s;
   |     ^^

error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            1713,
        ),
        hi: BytePos(
            1715,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/types/nonPrimitive/nonPrimitiveConstraintOfIndexAccessType.ts:25:5
   |
25 |     tp = s;
   |     ^^

error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            1811,
        ),
        hi: BytePos(
            1813,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/types/nonPrimitive/nonPrimitiveConstraintOfIndexAccessType.ts:28:5
   |
28 |     tp = s;
   |     ^^

error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            1919,
        ),
        hi: BytePos(
            1921,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/types/nonPrimitive/nonPrimitiveConstraintOfIndexAccessType.ts:31:5
   |
31 |     tp = s;
   |     ^^

